If an RSS feed fails it won't break the new plugin.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="so.so.social.feed.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 		/* var feeds = [
-			"http://www.delicious.com/v2/rss/jgiven",
+			"http://dribbble.com/players/shauninman/shots.rss"
 		]; */
 		var feeds = [
 			"http://twitter.com/statuses/user_timeline/35092196.rss",
@@ -20,7 +20,8 @@
 			"http://svn.johnpatrickgiven.com/feed/",
 			"http://github.com/iamjpg.atom",
 			"http://ws.audioscrobbler.com/2.0/user/jgiven/recenttracks.rss",
-			"http://iamjpg.tumblr.com/rss"
+			"http://iamjpg.tumblr.com/rss",
+			"http://dribbble.com/players/shauninman/shots.rss" // Since I don't have a dribbble account I am using Shaun Inman's for the example.
 		];
 		$(document).ready(function() {
 			$("#activityFeed").soSoSocial({
